<resources>
    <string name="app_name">Task 6.1D</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_email_hint">Confirm Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="welcome_placeholder">Welcome,\nStudent!\nLet\'s Start Learning!</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="setup_placeholder">Let\'s get you\nSetup!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="create_new_account">Create New Account</string>
    <string name="interests_placeholder">Your\nInterests</string>
    <string name="interests_selection_description">You may select up to 10 topics</string>
    <string name="next">Next</string>
    <string name="hello">Hello,</string>
    <string name="change_your_interests">Change Your Interests</string>
    <string name="generated_task_title_placeholder">Generated Task 1</string>
    <string name="generated_task_description_placeholder">Small Description for the generated Task</string>
    <string name="generated_qn_title_placeholder">1. Question 1</string>
    <string name="generated_qn_description_placeholder">This is a question with one right answer, and two wrong ones!</string>
    <string name="generated_ans_placeholder">Response from the model that you\'re using</string>
    <string name="go">Go</string>
    <string name="generated_by_ai">Generated by AI</string>
    <string name="answered_by_ai">Answered by AI</string>
    <string name="answer">Answer</string>
    <string name="your_results">Your Results</string>
    <string name="submit">Submit</string>
    <string name="continue_button">Continue</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="interest">Interest</string>
    <string name="correct_answer_is">Correct answer is:</string>

    <array name="interests_array">
        <item>Cheese</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Fast Food Chains</item>
        <item>Music Genres</item>
        <item>Algorithms</item>
        <item>Data Structures</item>
        <item>Web Development</item>
        <item>Artificial Intelligence</item>
        <item>Space Exploration</item>
        <item>Philosophy</item>
        <item>History</item>
        <item>Cooking</item>
        <item>Travel</item>
        <item>Fashion</item>
        <item>Photography</item>
        <item>Sports</item>
        <item>Nature</item>
        <item>Movies</item>
        <item>Video Games</item>
    </array>
</resources>