<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primary10"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/username_hint"
        android:layout_marginStart="18dp"
        android:layout_marginTop="48dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/primary10"/>

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/tvName"
        android:layout_margin="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/profile_picture" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvQuizzes"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_below="@id/ivAvatar"
        android:layout_marginHorizontal="28sp"
        android:layout_marginVertical="24sp"/>

    <Button
        android:id="@+id/btnInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvQuizzes"
        android:text="@string/change_your_interests"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="48sp"/>

</RelativeLayout>
