<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rounded_panel_background"
    android:elevation="6dp">

    <ImageView
        android:id="@+id/ivSparkles"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sparkles_icon"
        app:tint="@color/accent50"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generated_task_title_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary90"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generated_task_description_placeholder"
        android:textSize="18sp"
        android:textColor="@color/primary80"/>

    <ImageButton
        android:id="@+id/btnGo"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/arrow"
        android:background="@drawable/primary_button_background"
        android:contentDescription="@string/go" />

</LinearLayout>
