<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flBanner"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/banner_background">

        <ImageView
            android:id="@+id/ivSparkles"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sparkles_icon"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tvBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="40dp"
            android:text="@string/answered_by_ai"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/primary10"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_results"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/primary10"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAnswers"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginHorizontal="28sp"
        android:layout_marginVertical="32sp"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="48sp"/>

</LinearLayout>
