<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rounded_panel_background"
    android:elevation="6dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generated_qn_title_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary90"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/generated_qn_description_placeholder"
        android:textSize="18sp"
        android:textColor="@color/primary80"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="18sp"
            android:textColor="@color/primary80"
            android:button="@drawable/custom_checkbox"
            android:paddingHorizontal="8dp"/>

        <RadioButton
            android:id="@+id/rbAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="18sp"
            android:textColor="@color/primary80"
            android:button="@drawable/custom_checkbox"
            android:paddingHorizontal="8dp"/>

        <RadioButton
            android:id="@+id/rbAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="18sp"
            android:textColor="@color/primary80"
            android:button="@drawable/custom_checkbox"
            android:paddingHorizontal="8dp"/>

        <RadioButton
            android:id="@+id/rbAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="18sp"
            android:textColor="@color/primary80"
            android:button="@drawable/custom_checkbox"
            android:paddingHorizontal="8dp"/>
    </RadioGroup>

</LinearLayout>
